# Ary

./: .gitmodules  CMakeLists.txt  CPPLINT.cfg  README.md
.github/workflows/: build.yml
docs/: ary-design-doc.html  ary-design-doc.md  ary-doc.html  ary-doc.md
examples/basic examples/: basic-example.ary
examples/control flow/: control-flow.ary
examples/data types/: data-types.ary
examples/file import/: main.ary
examples/file import/lib/: helper.ary
examples/functions/: functions.ary
examples/operators/: operators-arithmetic.ary  operators-assignment.ary  operators-bitwise.ary  operators-comparison.ary  operators-logical.ary
include/: ary.h  diagnostic.h  lexer.h  shared.h  symboltable.h  token.h  tokenizer.h
src/: ary.cpp  diagnostic.cpp  lexer.cpp  main.cpp  token.cpp
test/: CMakeLists.txt  a-test.cpp  b-test.cpp  diagnostic-test.cpp  lexer-test.cpp  main.cpp
